...
                                                                send: { .consentManagerSelected($0) })) {
                                ForEach(ConsentManager.allCases, id:\.self) { cmp in
                                    Text(cmp.displayName)
                                }
                            }.accessibilityLabel("ImportMethod_Picker")
                        } header: {
                            Text("Consent")
                                .font(.adsBody)
                                .foregroundStyle(Color(AdColorPalette.Text.primary(onAccent: false).color))
                                .padding(.horizontal, -16)
                        }
                        .disabled(!appPermissions.settings)
                        .foregroundColor(Color(AdColorPalette.Text.primary(onAccent: false).color))
...
