...
                                    <constraint firstAttribute="height" constant="21" id="q5k-2q-yQw"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="creative" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oxj-K0-rZe" userLabel="creativeId">
                                <rect key="frame" x="6" y="142" width="53" height="14.5"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="53" id="1av-7f-tux"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                <nil key="textColor"/>
...
